{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 90,
  "lineage": "975063d1-e224-40a1-a190-f3b9b30a75fe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terra_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01774536c57ab815f",
            "arn": "arn:aws:ec2:eu-north-1:559767096828:instance/i-00400527edf7ddb1e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00400527edf7ddb1e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terra_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-066c832cbb4c09452",
            "private_dns": "ip-10-10-1-215.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.215",
            "public_dns": "ec2-16-171-224-245.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.171.224.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c2e110db42ae9a7f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b416d21b3c185b7d",
            "tags": {
              "Name": "Terraform Test"
            },
            "tags_all": {
              "Name": "Terraform Test"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02d61752b6dbbe07a"
            ]
          },
          "dependencies": [
            "aws_key_pair.terra_key",
            "aws_security_group.terra_security_group",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc",
            "data.aws_ami.Ubuntu_22_04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:559767096828:internet-gateway/igw-00298570f392f7188",
            "id": "igw-00298570f392f7188",
            "owner_id": "559767096828",
            "tags": {
              "Name": "Terraform Test"
            },
            "tags_all": {
              "Name": "Terraform Test"
            },
            "vpc_id": "vpc-054ed4eaaa2277d7c"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "terra_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00298570f392f7188",
            "id": "r-rtb-08bf6e10dd50129be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08bf6e10dd50129be",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra_gw",
            "aws_route_table.terra_route_table",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:559767096828:route-table/rtb-08bf6e10dd50129be",
            "id": "rtb-08bf6e10dd50129be",
            "owner_id": "559767096828",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00298570f392f7188",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform Test"
            },
            "tags_all": {
              "Name": "Terraform Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-054ed4eaaa2277d7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra_asoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062906ea09cce841c",
            "route_table_id": "rtb-08bf6e10dd50129be",
            "subnet_id": "subnet-0b416d21b3c185b7d"
          },
          "dependencies": [
            "aws_route_table.terra_route_table",
            "aws_subnet.terra_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terra_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:559767096828:security-group/sg-02d61752b6dbbe07a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress connections",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d61752b6dbbe07a",
            "ingress": [
              {
                "cidr_blocks": [
                  "41.239.125.44/32"
                ],
                "description": "Allow ingres HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "41.239.125.44/32"
                ],
                "description": "Allow ingres SSH connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terra_sg",
            "name_prefix": "",
            "owner_id": "559767096828",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform Test"
            },
            "tags_all": {
              "Name": "Terraform Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-054ed4eaaa2277d7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:559767096828:subnet/subnet-0b416d21b3c185b7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b416d21b3c185b7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "559767096828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform Test"
            },
            "tags_all": {
              "Name": "Terraform Test"
            },
            "vpc_id": "vpc-054ed4eaaa2277d7c"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:559767096828:vpc/vpc-054ed4eaaa2277d7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02936e588167b59f8",
            "default_route_table_id": "rtb-03e03705892fc5829",
            "default_security_group_id": "sg-0f5a3c55ebf80472e",
            "dhcp_options_id": "dopt-0d9bf65f5f9ec143c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054ed4eaaa2277d7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e03705892fc5829",
            "owner_id": "559767096828",
            "tags": {
              "Name": "Terraform Test"
            },
            "tags_all": {
              "Name": "Terraform Test"
            }
          }
        }
      ]
    }
  ]
}